--- a/custom_403.html
+++ b/custom_403.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head><title>403 Forbidden</title></head>
+<head><title>Error loading page</title></head>
 <body>
-<h1>403 Forbidden</h1>
-<p>You don't have permission to access this resource!!</p>
+<h1>Error loading page</h1>
+<p>The server may be experiencing higher than normal use. Please wait a few seconds and try reloading the page.<p>
+<p>If you continue having difficulty accessing the site, please contact the TDL Helpdesk at <a href="mailto:support@tdl.org">support@tdl.org</a>.</p>
 </body>
 </html>
